--- a/new 1.css
+++ b/new 1.css
@@ -103,7 +103,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D1%82%D0%B5%D1%81%D1%82%D0%BE%2016%20%D0%BD%D0%B0%209.jpeg");
+ background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/photo1676814583%20(1).jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
@@ -116,7 +116,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D0%BA%D0%B5%D0%BA%D1%81%D1%8B%2016%20%D0%BD%D0%B0%209.jpeg");
+ background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/photo1676814583%20(2).jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
@@ -129,7 +129,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D0%BA%D0%B0%D0%BF%D0%BA%D0%B5%D0%B9%D0%BA%D0%B8%2016%20%D0%BD%D0%B0%209.jpeg");
+ background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/photo1676814583.jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
