--- a/new 1.css
+++ b/new 1.css
@@ -103,7 +103,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/photo1676814583%20(1).jpeg");
+ background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583%20(2).jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
@@ -116,7 +116,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/photo1676814583%20(2).jpeg");
+ background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583%20(1).jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
@@ -129,7 +129,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/photo1676814583.jpeg");
+ background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583.jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
