--- a/new 1.css
+++ b/new 1.css
@@ -5,13 +5,12 @@ html, body {
   height: 100%;
   margin: 0;
   background-color: pink;
-}
-.box {
+}.box {
     width: 80%;
-    position: centre;
+    position: absolute;
     margin: auto;
   overflow: auto;
-  }
+}
 #main {
  width: 100%;
  padding: 0;
@@ -27,12 +26,11 @@ html, body {
 }
 .margin-bot-10 {
  padding-bottom: 10px;
-}
-#landing h1 {
+}#landing h1 {
  font-family: 'Oswald', sans-serif;
  font-size: 24px;
  font-weight: 400;
- text-transform: center;
+ text-transform: uppercase;
  color: black;
  padding: 0;
  margin: 0;
@@ -56,17 +54,9 @@ html, body {
  line-height: 0;
  font-weight: 400;
  letter-spacing: 8px;
- text-transform: center;
+ text-transform: uppercase;
  color: black;
-}
-#landing p {
- font-family: 'Source Sans Pro', sans-serif;
- font-weight: 400;
- font-size: 14px;
- line-height: 24px;
- color: black;
-}
-.first-character {
+}.first-character {
  font-weight: 400;
  float: left;
  font-size: 84px;
@@ -86,8 +76,7 @@ html, body {
 #landing .title h1 {
  font-size: 35px;
  letter-spacing: 8px;
-}
-#landing .block {
+}#landing .block {
  background: white;
  padding: 6px;
  width: 820px;
@@ -105,7 +94,7 @@ html, body {
  left: 0;
  width: 100%;
  height: 100%;
- background-color: white;
+ background-color: black;
  opacity: 0.70;
 }
 #landing .parallax-one {
@@ -114,58 +103,53 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583%20(2).jpeg");
+ background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D1%82%D0%B5%D1%81%D1%82%D0%BE%2016%20%D0%BD%D0%B0%209.jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  background-repeat: no-repeat;
  background-position: top center;
-}
-#landing .line-break {
- background: linear-gradient(60deg, #008000, #ffd700, #dc143c);
- width: 100%;
- margin: 0 auto;
-}
-#landing .parallax-two {
+}#landing .parallax-two {
  padding-top: 200px;
  padding-bottom: 200px;
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583%20(1).jpeg");
+ background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D0%BA%D0%B5%D0%BA%D1%81%D1%8B%2016%20%D0%BD%D0%B0%209.jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  background-repeat: no-repeat;
  background-position: top center;
-}
-#landing .line-break {
- background: linear-gradient(60deg, #008000, #ffd700, #dc143c);
- width: 100%;
- margin: 0 auto;
-}
-#landing .parallax-three {
+}#landing .parallax-three {
  padding-top: 200px;
  padding-bottom: 200px;
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583.jpeg");
+ background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D0%BA%D0%B0%D0%BF%D0%BA%D0%B5%D0%B9%D0%BA%D0%B8%2016%20%D0%BD%D0%B0%209.jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  background-repeat: no-repeat;
  background-position: top center;
-}
-#landing .line-break {
+}#landing .line-break {
  background: linear-gradient(60deg, #008000, #ffd700, #dc143c);
  width: 100%;
  margin: 0 auto;
 }
-@media screen and (max-width: 959px) and (min-width: 768px) {
+#landing .line-break one{
+ background: linear-gradient(60deg, #008000, #ffd700, #dc143c);
+ width: 100%;
+ margin: 0 auto;
+}#landing .line-break two{
+ background: linear-gradient(60deg, #008000, #ffd700, #dc143c);
+ width: 100%;
+ margin: 0 auto;
+}@media screen and (max-width: 959px) and (min-width: 768px) {
  #flat .block {
   padding: 40px;
   width: 620px;
@@ -193,3 +177,5 @@ html, body {
   width: 290px;
  }
 }
+
+
