--- a/new 1.css
+++ b/new 1.css
@@ -61,6 +61,7 @@ html, body {
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
+ color: black;
 }
 }.first-character {
  font-weight: 400;
@@ -109,7 +110,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D1%82%D0%B5%D1%81%D1%82%D0%BE%2016%20%D0%BD%D0%B0%209.jpeg");
+ background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583%20(2).jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
@@ -122,7 +123,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D0%BA%D0%B5%D0%BA%D1%81%D1%8B%2016%20%D0%BD%D0%B0%209.jpeg");
+ background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583%20(1).jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
@@ -135,7 +136,7 @@ html, body {
  overflow: hidden;
  position: relative;
  width: 100%;
- background-image: url("https://github.com/Mariakurdenkova/hometask/blob/main/%D0%BA%D0%B0%D0%BF%D0%BA%D0%B5%D0%B9%D0%BA%D0%B8%2016%20%D0%BD%D0%B0%209.jpeg");
+ background-image: url("https://raw.githubusercontent.com/Mariakurdenkova/hometask/main/photo1676814583.jpeg");
  background-attachment: fixed;
  background-size: cover;
  -moz-background-size: cover;
