--- a/лендинг с счетчиком.css
+++ b/лендинг с счетчиком.css
@@ -6,7 +6,7 @@ html, body {
     font-family: 'Open Sans', sans-serif;
     height: 100%;
     margin: 0;
-  background: url("blob:https://web.telegram.org/9240b6cf-a0c6-43b3-9778-ef801a4e4834");
+  background: url("https://web.telegram.org/9240b6cf-a0c6-43b3-9778-ef801a4e4834");
   background-size: cover;
 }
 
